--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hello World
+    <!DOCTYPE html>
+    <html>
+      <head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+        <title>Yuh</title>
+      </head>
+      <body>
+        <div class="container-fluid" style="color: blue">
+          <div class="row">
+            <h1>Yuhh</h1>
+          </div>
+          <div class="row">
+            <p>Yuhhh</p>
+          </div>
+        </div>
+        <p>WIP</p>
+      </body>
+    </html>
+  
