--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
     <!DOCTYPE html>
     <html>
       <head>
+        <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
         <title>Yuh</title>
       </head>
       <body>
         <div class="container-fluid" style="color: blue">
           <div class="row">
-            <h1>Yuhh</h1>
+            <div class = "col-md-12">
+              <h1>Yuhh</h1>
+            </div>
           </div>
-          <div class="row">
-            <p>Yuhhh</p>
+          <div class="col-md-6">
+            <!--<div class = "col-md-6">-->
+              <p>Yuhhh</p>
+            <!--</div>-->
           </div>
         </div>
         <p>WIP</p>
+         <p>Here is a <a href="https://susa.berkeley.edu">link</a> to SUSA's website.</p>
       </body>
     </html>
   
